2.2.6
- added: theSubDB, thanks to jrhames

2.2.5
- added: Added storing of Bierdopje show ids to reduce the number of api calls. thx mr_blobby
- use getAddonInfo('profile') for temporary subtitle location 

2.2.4
- fixed: Titulky service login, thx to Libor

2.2.3
- fixed: Bierdopje needs a single quote changed to two single quotes (Grey's Anatomy -> Grey''s Anatomy) otherwise it couldn't find a show-id, thx mr_blobby 
- fixed: Hungarian translation, thanks alanwww1.
- fixed: addic7ed would fail on That '70s Show, we remove "'" to fix the search

2.2.2
-added: Itasa (Italiansubs.net), thx mr_blobby

2.2.1
-added: Swesub.nu, thx mr_blobby

2.2.0
- simplify services code
- automatically retrieve list of available services

2.1.9
- fixed: addic7ed service changes due to the changed website layout

2.1.8
- fixed: indent error while cleaning up :(

2.1.7
- changed: use getAddonInfo('path') instead of os.getcwd()

2.1.6
- Changes in Titulky service: service now supports series too, improved 'sync' feature (now based on file size), fixed bad filtering when movie did not have 'year' field defined, thanks to Libor Zoubek
- updated: Swedish translation, thx Pike and Blittan
- fixed: encode issue with Cyrilyc titles
- cosmetics

2.1.5
- added: Bulgarian translation, Thanks to Radoslav Vasilev

2.1.4
- updated: LegendasTV and Brazilian string
- fixed: if movie is in rar it wouldnt honour custom subtitle path

2.1.3
- fixed: smb hashing *should* work now :)

2.1.2
- cosmetics: removed spaces from strings, unix EOL

2.1.1
- fixes in Subdivx service
- cleanup of language string files(I hope everyone is happy now ;p)

2.1.0
- cleaned up language files
- removed label colour setting

2.0.9
- fixed: Addic7ed languages, would fail on Chinese (Traditional) and Chinese (Simplified).
- fixed: podnapisi service hash search + cosmetics 
- xml window cosmetics 

2.0.8
- fix: Arabic had incorrect two letter code(would crash podnapisi search)