@@ -26,6 +26,7 @@
     <string id="759">Enter code of image in notification area</string>
     <string id="760">Available Services</string>        
     <string id="761">You must be logged in to download these subtitles,[CR]verify your settings at the addon Configuration</string>
+    <string id="762">Addon Settings</string>
 
   <!-- Script Settings -->
 
